fix: :test_tube: test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
           registry-url: http://npm.pkg.github.com
           scope: "@codecret"
       - run: npm install
+      - run: |
+          echo "Listing all environment variables:"
+          printenv
       - run: npm run build
       - run: npm publish
     env:
