--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reactslide/reactin-ui",
+  "name": "@reactslice/reactin-ui",
   "private": false,
   "version": "0.0.5",
   "type": "module",
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/reactslide/reactin-ui.git"
+    "url": "git+https://github.com/reactslice/reactin-ui.git"
   },
   "peerDependencies": {
     "react": ">=16.0.0"
