--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@reactslice/reactin-ui",
   "private": false,
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "main": "./dist/reactin.umd.cjs",
   "module": "./dist/reactin.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    ":registry": "https://npm.pkg.github.com"
   },
   "exports": {
     ".": {
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/reactslice/reactin-ui.git"
+    "url": "https://github.com/reactslice/reactin-ui.git"
   },
   "peerDependencies": {
     "react": ">=16.0.0"
@@ -57,7 +57,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.8.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-storybook": "^0.8.0",
