--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: React components package.
 on:
   push:
     branches:
-      - actiontest
+      - main
   pull_request:
     branches:
-      - actiontest
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
