--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reactslice/reactin-ui",
+  "name": "@manyclues/iuui",
   "private": false,
   "version": "0.0.7",
   "type": "module",
@@ -24,6 +24,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@manyclues/iuui": "^0.0.7",
     "path": "^0.12.7",
     "react": ">=16.0.0",
     "react-dom": "^18.3.1",
@@ -31,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/reactslice/reactin-ui.git"
+    "url": "https://github.com/manyclues/iuui.git"
   },
   "peerDependencies": {
     "react": ">=16.0.0"
