--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "paths": {
-      "reactin-ui": ["./lib/main.ts"]
+      "iuui": ["./lib/main.ts"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
