--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "paths": {
-      "reactin-ui": ["./lib/main.ts"]
+      "iuui": ["./lib/main.ts"]
     },
 
     /* Bundler mode */
