--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@manyclues/iuui",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "./dist/iuui.umd.cjs",
   "module": "./dist/iuui.js",
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/manyclues/iuui.git"
+    "url": "git+https://github.com/manyclues/iuui.git"
   },
   "peerDependencies": {
     "react": ">=16.0.0"
