--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,18 +7,17 @@ on:
   pull_request:
     branches:
       - actiontest
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: "18"
       - run: npm ci
 
-  publish-gpr:
+  publish:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -26,24 +25,15 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
-          registry-url: https://npm.pkg.github.com
-          scope: "@manyclues"
-      - run: npm install
-      - run: npm run build
+
+      # Publish to GitHub Packages
+      - run: npm config set registry https://npm.pkg.github.com/
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
 
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "18"
-          registry-url: "https://registry.npmjs.org/"
-      - run: npm ci
-      - run: npm publish --provenance --access public
+      # Publish to npm registry
+      - run: npm config set registry https://registry.npmjs.org/
+      - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.PUBLISH_NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
