--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - actiontest
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,7 +18,7 @@ jobs:
           node-version: "18"
       - run: npm ci
 
-  publish:
+  publish-gpr:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -25,15 +26,24 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
-
-      # Publish to GitHub Packages
-      - run: npm config set registry https://npm.pkg.github.com/
-      - run: npm publish --access public
+          registry-url: https://npm.pkg.github.com
+          scope: "@manyclues"
+      - run: npm install
+      - run: npm run build
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
 
-      # Publish to npm registry
-      - run: npm config set registry https://registry.npmjs.org/
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.PUBLISH_NPM_TOKEN}}
