fix: :bug: test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           node-version: "18"
           registry-url: https://registry.npmjs.org/
+          scope: "@manyclues"
       - run: npm ci
       - run: npm publish --access public
         env:
