--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@manyclues/iuui",
+  "name": "iuui",
   "private": false,
-  "version": "0.0.18",
+  "version": "0.0.19",
   "type": "module",
   "main": "./dist/iuui.umd.cjs",
   "module": "./dist/iuui.js",
