--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@manyclues/iuui",
   "private": false,
-  "version": "0.0.24",
+  "version": "0.0.25",
   "type": "module",
   "main": "./dist/iuui.umd.cjs",
   "module": "./dist/iuui.js",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc && vite build",
     "prebuild": "rm -rf dist",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -57,6 +57,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -67,7 +68,8 @@
     "storybook": "^8.2.9",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-dts": "^4.0.3"
   },
   "eslintConfig": {
     "extends": [
