--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,11 +2,17 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
     "paths": {
-      "iuui": ["./lib/main.ts"]
+      "iuui": [
+        "./lib/main.ts"
+      ]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -15,7 +21,6 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -23,5 +28,8 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": false
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "lib"
+  ]
 }
