--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@manyclues/iuui",
   "private": false,
-  "version": "0.0.26",
+  "version": "0.0.27",
   "type": "module",
   "main": "./dist/iuui.umd.cjs",
   "module": "./dist/iuui.js",
@@ -12,7 +12,8 @@
     ".": {
       "import": "./dist/iuui.js",
       "require": "./dist/iuui.umd.cjs"
-    }
+    },
+    "./dist/style.css": "./dist/main.css"
   },
   "scripts": {
     "dev": "vite",
