--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@manyclues/iuui",
   "private": false,
-  "version": "0.0.31",
+  "version": "0.0.32",
   "type": "module",
   "main": "./dist/iuui.umd.cjs",
   "module": "./dist/iuui.js",
@@ -30,6 +30,7 @@
     "path": "^0.12.7",
     "react": ">=16.0.0",
     "react-dom": "^18.3.1",
+    "rimraf": "^6.0.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "repository": {
